# openapi/api/v1/openapi.yaml
@@ -5,7 +5,7 @@ info:
   contact:
     name: Ecosyste.ms
     email: support@ecosyste.ms
-    url: https://ecosyste.ms 
+    url: https://ecosyste.ms
   version: 1.0.0
   license:
     name: CC-BY-SA-4.0
@@ -14,7 +14,7 @@ externalDocs:
   description: GitHub Project
   url: https://github.com/ecosyste-ms/ost
 servers:
-- url: https://ost.ecosyste.ms/api/v1
+  - url: https://ost.ecosyste.ms/api/v1
 paths:
   /projects:
     get:
@@ -31,13 +31,13 @@ paths:
             type: boolean
         - name: page
           in: query
-          description: pagination page number 
+          description: pagination page number
           required: false
           schema:
             type: integer
         - name: per_page
           in: query
-          description: Number of records to return 
+          description: Number of records to return
           required: false
           schema:
             type: integer
@@ -62,7 +62,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Project'
+                  $ref: "#/components/schemas/Project"
   /projects/{id}:
     get:
       description: get a project by id
@@ -82,7 +82,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Project'
+                $ref: "#/components/schemas/Project"
   /projects/lookup:
     get:
       description: lookup project by url
@@ -102,7 +102,7 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: '#/components/schemas/Project'
+                $ref: "#/components/schemas/Project"
   /projects/packages:
     get:
       description: get projects with packages
@@ -117,7 +117,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Project'
+                  $ref: "#/components/schemas/Project"
   /projects/images:
     get:
       description: get projects with images
@@ -132,7 +132,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Project'
+                  $ref: "#/components/schemas/Project"
   /issues:
     get:
       description: get issues
@@ -140,15 +140,33 @@ paths:
       tags:
         - issues
       parameters:
+        - name: category
+          in: query
+          description: Filter issues by project category
+          required: false
+          schema:
+            type: string
+        - name: language
+          in: query
+          description: Filter issues by programming language
+          required: false
+          schema:
+            type: string
+        - name: keyword
+          in: query
+          description: Filter issues by project keyword
+          required: false
+          schema:
+            type: string
         - name: page
           in: query
-          description: pagination page number 
+          description: pagination page number
           required: false
           schema:
             type: integer
         - name: per_page
           in: query
-          description: Number of records to return 
+          description: Number of records to return
           required: false
           schema:
             type: integer
@@ -158,6 +176,7 @@ paths:
           required: false
           schema:
             type: string
+            enum: [created_at, updated_at, stars]
         - name: order
           in: query
           description: The sort order (asc or desc)
@@ -173,7 +192,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Issue'
+                  $ref: "#/components/schemas/Issue"
   /issues/openclimateaction:
     get:
       description: get issues for openclimateaction
@@ -183,13 +202,13 @@ paths:
       parameters:
         - name: page
           in: query
-          description: pagination page number 
+          description: pagination page number
           required: false
           schema:
             type: integer
         - name: per_page
           in: query
-          description: Number of records to return 
+          description: Number of records to return
           required: false
           schema:
             type: integer
@@ -214,7 +233,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Issue'
+                  $ref: "#/components/schemas/Issue"
 components:
   schemas:
     Project:
